<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorBackgroundPink">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="14dp"
        android:fontFamily="@font/font_family_tmoney_round_wind_extra_bold"
        android:text="@string/notification"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/text_view_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:fontFamily="@font/font_family_tmoney_round_wind_extra_bold"
        android:lineSpacingMultiplier="1.1"
        tools:text="Notification Message"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:foreground="?attr/selectableItemBackground"
            android:background="@color/colorToolbarPink"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="8dp"
                android:background="@color/colorToolbarPink"
                android:fontFamily="@font/font_family_tmoney_round_wind_extra_bold"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:textColor="@android:color/white"/>

        </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/colorToolbarPink"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="8dp"
            android:background="@color/colorToolbarPink"
            android:fontFamily="@font/font_family_tmoney_round_wind_extra_bold"
            android:text="@string/ok"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>

    </FrameLayout>

    </LinearLayout>

</LinearLayout>